--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@web3auth/metamask-adapter": "^3.2.0",
     "chakra-react-select": "^4.4.1",
     "chakra-ui-file-picker": "^0.3.0",
+    "chart.js": "^4.0.1",
     "framer-motion": "^7.6.18",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.16",
     "web-vitals": "^2.1.4",
     "web3": "^1.8.1",
     "web3.storage": "^4.4.0",
