--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chakra-ui-file-picker": "^0.3.0",
     "chart.js": "^4.0.1",
     "framer-motion": "^7.6.18",
+    "js-ipfs-fetch": "^4.2.3",
     "lottie-web": "^5.10.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
